Face Detection: Use DetectedFace in FaceDetector.cpp iso DOMRect

FaceDetector.detect() in ToT returns a sequence<DetectedObject>,
but DetectedObject doesn't exist, and it should return DetectedFace
instead according to the Spec. Also, DetectedFace is not used at the
moment (FaceDetector  goes around this issue by returning DOMRects
directly).

This CL sorts that out by returning DetectedFaces directly.

BUG=673075

Review-Url: https://codereview.chromium.org/2564123003
Cr-Commit-Position: refs/heads/master@{#437794}

Former-commit-id: f1f5959ffc84ab6069c0a1b4cd0c784b24c996d2